Sun May 29 02:16:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/net/http/utils.rb (TestNetHTTPUtils#teardown): add nil check.

Sun May 29 00:22:40 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (before_exec, after_exec): change from macro to function.

Sat May 28 19:30:17 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (before_exec, after_exec): change SIGPIPE handler to SIG_DFL
	  before calling execve(). Because r31760 reintroduced an issue that
	  system() may hang up (i.e. [ruby-dev:12261]).
	* process.c (save_sigpipe, restore_sigpipe): new.

Sat May 28 16:08:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (Init_signal, default_handler): change default SIGPIPE handler
	  from empty function to SIG_IGN. [ruby-dev:43215]
	* signal.c (sigpipe): removed.

Sat May 28 03:04:27 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (fill_cbuf): return MORE_CHAR_SUSPENDED when cbuf is not empty.

Sat May 28 02:22:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* string.c (rb_str_bytesize): rb_str_bytesize() should use LONG2NUM().
	  Patch by Nikolai Weibull. [Bug #4789] [ruby-core:36511]

Sat May 28 02:06:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (fill_cbuf): Fix test-all crash.

Sat May 28 00:58:40 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb (method_missing): Handle [] and []= correctly.
	  Based on a patch by Caius Durling, bug #4179 [ruby-core:33792]

Fri May 27 23:56:54 2011  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_core.rb (Tester::test_text_frozen): split frozen
	  string test. refs #4783

Fri May 27 22:46:23 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (gem): install gemspec of json.  fixed #4784

Fri May 27 22:45:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (validate_enc_binmode): do not clear textmode flag if
	  default.  fixed #4732

	* io.c (fill_cbuf): finish reading at EOF.
